--- a/Dictionary/second.xaml
+++ b/Dictionary/second.xaml
@@ -1,16 +1,12 @@
-﻿<Window x:Name="question" x:Class="Dictionary.Question"
+﻿<Window x:Class="Dictionary.second"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dictionary"
         mc:Ignorable="d"
-        Title="Question" Height="450" Width="800">
+        Title="second" Height="450" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="161*"/>
-        </Grid.ColumnDefinitions>
-
+        
     </Grid>
 </Window>
