--- a/Dictionary/MainWindow.xaml
+++ b/Dictionary/MainWindow.xaml
@@ -5,9 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dictionary"
         mc:Ignorable="d"
-        Title="Переводчик" Height="450" Width="800">
-    <Grid>
-        <Button x:Name="Translate" Content="Перевести" HorizontalAlignment="Left" Margin="137,301,0,0" VerticalAlignment="Top" Width="113" RenderTransformOrigin="0.5,0.5" Height="74" Click="Translate_Click">
+        Title="Переводчик" Height="500" Width="900" SizeToContent="Width" ScrollViewer.VerticalScrollBarVisibility="Disabled" Padding="0" MinWidth="900" MinHeight="500" Top="{DynamicResource {x:Static SystemParameters.IconHeightKey}}">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="Black" Offset="0"/>
+            <GradientStop Color="#FFDAD2AE" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
+    <Grid Focusable="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="78*"/>
+            <ColumnDefinition Width="403*"/>
+            <ColumnDefinition Width="78*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="333*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="Translate" Content="Перевести" Margin="53,0,237,40" VerticalAlignment="Bottom" Width="113" RenderTransformOrigin="0.5,0.5" Height="74" Click="Translate_Click" Grid.Column="1" HorizontalContentAlignment="Center">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
@@ -20,12 +33,12 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <Button x:Name="ADD_WORD" Content="Добавить слово" HorizontalAlignment="Left" Margin="362,296,0,0" VerticalAlignment="Top" Width="113" Height="65" Click="ADD_WORD_Click">
+        <Button x:Name="ADD_WORD" Content="Добавить слово" HorizontalAlignment="Center" Margin="289,0,0,57" VerticalAlignment="Bottom" Width="114" Height="65" Click="ADD_WORD_Click" Grid.Column="1">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <Button x:Name="DELETE_WORD" Content="Удалить слово" HorizontalAlignment="Left" Margin="584,285,0,0" VerticalAlignment="Top" Width="129" Height="58" RenderTransformOrigin="-0.013,0.624" Click="DELETE_WORD_Click">
+        <Button x:Name="DELETE_WORD" Content="Удалить слово" Margin="93,0,109,71" VerticalAlignment="Bottom" Height="58" RenderTransformOrigin="-0.013,0.624" Click="DELETE_WORD_Click" Grid.Column="4" HorizontalContentAlignment="Center">
             <Button.Effect>
                 <DropShadowEffect/>
             </Button.Effect>
@@ -38,16 +51,30 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
-        <TextBox x:Name="Forein_word" HorizontalAlignment="Left" Height="55" Margin="75,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="268">
+        <TextBox x:Name="Forein_word" Height="55" Margin="0,59,111,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
             <TextBox.Effect>
                 <DropShadowEffect/>
             </TextBox.Effect>
         </TextBox>
-        <Label x:Name="Label_1" Content="Label" HorizontalAlignment="Left" Margin="75,28,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="Label_2" Content="Label" HorizontalAlignment="Left" Margin="411,28,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="To_Russian" Content="На русский" HorizontalAlignment="Left" Margin="75,161,0,0" VerticalAlignment="Top" Checked="To_Russian_Checked"/>
-        <RadioButton x:Name="To_English" Content="To English" HorizontalAlignment="Left" Margin="75,190,0,0" VerticalAlignment="Top" Checked="To_English_Checked"/>
-        <TextBox x:Name="Native_word" HorizontalAlignment="Left" Height="55" Margin="420,59,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="334">
+        <Label x:Name="Label_1" Content="English" Margin="0,28,367,0" VerticalAlignment="Top" RenderTransformOrigin="-0.604,0.538" Grid.Column="1" HorizontalContentAlignment="Center" Height="26">
+            <Label.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </Label.Background>
+        </Label>
+        <Label x:Name="Label_2" Content="Русский" Margin="0,28,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.407,0.538" Grid.Column="2" HorizontalContentAlignment="Center" Height="26">
+            <Label.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </Label.Background>
+        </Label>
+        <RadioButton x:Name="To_Russian" Content="На русский" HorizontalAlignment="Left" Margin="6,161,0,0" Checked="To_Russian_Checked" VerticalAlignment="Top" Grid.Column="1" MinWidth="78" MinHeight="16" Height="16" Width="78"/>
+        <RadioButton x:Name="To_English" Content="To English" HorizontalAlignment="Left" Margin="6,190,0,0" VerticalAlignment="Top" Checked="To_English_Checked" Grid.Column="1" Height="16" Width="70"/>
+        <TextBox x:Name="Native_word" Height="55" Margin="1,59,62,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Grid.ColumnSpan="3" Grid.Column="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
             <TextBox.Effect>
                 <DropShadowEffect/>
             </TextBox.Effect>
